prototypes/n8n/ytt/ingressroute.yaml
#@ load("@ytt:data", "data")
#@ domain = "n8n." + data.values.shared.domain
#@ traefikLB = "lb." + data.values.shared.domain
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  annotations:
    external-dns.alpha.kubernetes.io/target: #@ traefikLB
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
  - websecure
  routes:
    - kind: Rule
      match: #@ "Host(`{}`)".format(domain)
      priority: 10
      services:
        - name: n8n
          port: 5678
